RESOLVED FIXED30044
[Qt] EventSender::keyDown() cannot send function-key events.
https://bugs.webkit.org/show_bug.cgi?id=30044
Summary [Qt] EventSender::keyDown() cannot send function-key events.
Jakub Wieczorek
Reported 2009-10-03 07:26:11 PDT
This is required for the fast/events/keydown-function-keys.html layout test.
Attachments
patch (1.98 KB, patch)
2009-10-03 07:28 PDT, Jakub Wieczorek
eric: review+
patch (2.31 KB, patch)
2009-10-05 09:59 PDT, Jakub Wieczorek
no flags
Jakub Wieczorek
Comment 1 2009-10-03 07:28:51 PDT
Eric Seidel (no email)
Comment 2 2009-10-05 09:20:31 PDT
Comment on attachment 40573 [details] patch Looks OK, but the ChangeLog should say what layout test this fixes.
Jakub Wieczorek
Comment 3 2009-10-05 09:59:26 PDT
Created attachment 40638 [details] patch (In reply to comment #2) > (From update of attachment 40573 [details]) > Looks OK, but the ChangeLog should say what layout test this fixes. The patch itself does not fix the above mentioned test failure because there's one more bug in Qt DRT that makes the test fail: https://bugs.webkit.org/show_bug.cgi?id=30043 I've also added ' && functionKey <= 35' to the assertion, just in case.
Simon Hausmann
Comment 4 2009-10-05 14:47:20 PDT
Comment on attachment 40638 [details] patch r=me, but please also make a patch that removes the skipped test from the list. Or in the future you could do that in one single change :-)
WebKit Commit Bot
Comment 5 2009-10-05 15:37:41 PDT
Comment on attachment 40638 [details] patch Clearing flags on attachment: 40638 Committed r49118: <http://trac.webkit.org/changeset/49118>
WebKit Commit Bot
Comment 6 2009-10-05 15:37:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.