2009-10-05  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] EventSender::keyDown() cannot send function-key events.
        https://bugs.webkit.org/show_bug.cgi?id=30044

        This affects the fast/events/keydown-function-keys.html layout test.

        * DumpRenderTree/qt/jsobjects.cpp:
        (EventSender::keyDown):

Canonical link: https://commits.webkit.org/40677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49118 268f45cc-cd09-0410-ab3c-d52691b4dbfc